--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
+  <body class="container">
     <header>
       <% if signed_in? %>
       Signed in as: <%= current_user.email %>
@@ -23,7 +23,9 @@
           <div class="flash <%= key %>"><%= value %></div>
         <% end %>
       </div>
+      
+        <%= yield %>
+
     </section>
-    <%= yield %>
   </body>
 </html>
